WindowsStore/WindowsPhone: SyncDiscoveryService finally works as intended like on other platforms.
WindowsStore: SyncPage is almost completed. Added logo and splash screen. Added custom theme. Now detecting IP address correctly.

Related to issue #423 and issue #424.

--- a/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.WindowsPhone.csproj
@@ -197,6 +197,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="PortableTPL">
+      <HintPath>..\packages\PortableTPL.1.0.1\lib\PortableTPL.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.15\lib\sl4-windowsphone71\System.Net.Http.dll</HintPath>
     </Reference>
