--- a/MPfm/MPfm.WindowsStore/MPfm.WindowsStore.csproj
+++ b/MPfm/MPfm.WindowsStore/MPfm.WindowsStore.csproj
@@ -128,6 +128,12 @@
     </Compile>
     <Compile Include="Classes\Navigation\WindowsStoreNavigationManager.cs" />
     <Compile Include="Classes\Pages\Base\BasePage.cs" />
+    <Compile Include="Classes\Pages\SyncDownloadPage.xaml.cs">
+      <DependentUpon>SyncDownloadPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Pages\SyncMenuPage.xaml.cs">
+      <DependentUpon>SyncMenuPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Pages\SplashPage.xaml.cs">
       <DependentUpon>SplashPage.xaml</DependentUpon>
     </Compile>
@@ -171,6 +177,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Classes\Pages\SyncDownloadPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Classes\Pages\SyncMenuPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Classes\Pages\SplashPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
