WindowsStore/WindowsPhone: Sync discovery service now supports cancelling. More optimizations to sync discovery. Windows Store: the list views are now actually populated with the right data and have the right look.
Related to issue #423 and issue #424.

--- a/MPfm/MPfm.WindowsStore/MPfm.WindowsStore.csproj
+++ b/MPfm/MPfm.WindowsStore/MPfm.WindowsStore.csproj
@@ -164,6 +164,7 @@
     <None Include="MPfm.WindowsStore_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Icons\icon_apple.png" />
     <Content Include="Assets\Logo.png" />
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
