iOS: Fixed bugs related to contextual menu in Album collection view. Updated project after changes on other platforms.
Related to issue #405.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -329,5 +329,6 @@
     <Compile Include="Views\ISelectFoldersView.cs" />
     <Compile Include="Presenters\Interfaces\ISelectFoldersPresenter.cs" />
     <Compile Include="Presenters\SelectFoldersPresenter.cs" />
+    <Compile Include="Models\FolderEntity.cs" />
   </ItemGroup>
 </Project>
