iOS: Several bug fixes and optimizations for Artist cells in MobileLibraryBrowserViewController. More bug fixes for iOS 7.
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -266,6 +266,9 @@
     </Compile>
     <Compile Include="Classes\Controls\MPfmButton.cs" />
     <Compile Include="Classes\Controls\MPfmImageButton.cs" />
+    <Compile Include="Classes\Controls\MPfmPlaylistTableViewCell.cs">
+      <DependentUpon>MPfmCollectionViewCell.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
