iOS: Added new Playlist button in NavigationController of PlayerViewController. Moved MPVolumeView from PlayerViewController to EqualizerPresetsViewController. Added left swipe back gesture (iOS 7 standard) for several view controllers.
Related to issue #405.

--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -482,6 +482,8 @@
     <BundleResource Include="Images\ContextualButtons\add%402x.png" />
     <BundleResource Include="Images\ContextualButtons\trash%402x.png" />
     <BundleResource Include="Images\ContextualButtons\play%402x.png" />
+    <BundleResource Include="Images\Tables\chevron_top_blue.png" />
+    <BundleResource Include="Images\Tables\chevron_top_blue%402x.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.iOS.csproj">
