Mac: Added missing outlets/actions for MainWindow.xib and fixed UI bugs. Now opening default browser to search for guitar tabs/bass tabs/lyrics.
Related to issue #381.

--- a/MPfm/MPfm.Mac/MPfm.Mac.csproj
+++ b/MPfm/MPfm.Mac/MPfm.Mac.csproj
@@ -123,6 +123,7 @@
     <Reference Include="TinyIoC">
       <HintPath>..\MPfm.Core\Lib\TinyIoC.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Windows\UpdateLibraryWindow.cs" />
