--- a/MPfm/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.csproj
@@ -178,13 +178,16 @@
     <Compile Include="Presenters\SplashPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
     <Compile Include="Views\ISplashView.cs" />
-    <Compile Include="Config\MPfmConfig.cs" />
-    <Compile Include="Config\MPfmAudioConfig.cs" />
-    <Compile Include="Config\MPfmControlsConfig.cs" />
-    <Compile Include="Config\MPfmTableViewConfig.cs" />
-    <Compile Include="Config\MPfmTableViewColumnConfig.cs" />
-    <Compile Include="Config\MPfmWindowConfig.cs" />
-    <Compile Include="Config\MPfmWindowsConfig.cs" />
+    <Compile Include="Config\RootAppConfig.cs" />    
+    <Compile Include="Config\Providers\XmlAppConfigProvider.cs" />
+    <Compile Include="Config\Providers\IAppConfigProvider.cs" />
+    <Compile Include="Config\AppConfig.cs" />
+    <Compile Include="Config\AudioAppConfig.cs" />
+    <Compile Include="Config\ControlsAppConfig.cs" />
+    <Compile Include="Config\TableViewAppConfig.cs" />
+    <Compile Include="Config\TableViewColumnAppConfig.cs" />
+    <Compile Include="Config\WindowAppConfig.cs" />
+    <Compile Include="Config\WindowsAppConfig.cs" />	
     <Compile Include="Services\PlayerService.cs" />
     <Compile Include="Services\Interfaces\IPlayerService.cs" />
     <Compile Include="Views\IPreferencesView.cs" />
