--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -127,6 +127,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Config\AppConfigManager.cs" />
+    <Compile Include="Config\IAppConfig.cs" />
     <Compile Include="Messages\ConnectionStatusChangedMessage.cs" />
     <Compile Include="Messages\ApplicationCloseMessage.cs" />
     <Compile Include="Messages\ActivateLockScreenMessage.cs" />
@@ -194,10 +196,9 @@
     <Compile Include="Presenters\SplashPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISplashPresenter.cs" />
     <Compile Include="Views\ISplashView.cs" />
-    <Compile Include="Config\RootAppConfig.cs" />    
+    <Compile Include="Config\RootAppConfig.cs" />
     <Compile Include="Config\Providers\XmlAppConfigProvider.cs" />
     <Compile Include="Config\Providers\IAppConfigProvider.cs" />
-    <Compile Include="Config\AppConfig.cs" />
     <Compile Include="Config\AudioAppConfig.cs" />
     <Compile Include="Config\ControlsAppConfig.cs" />
     <Compile Include="Config\TableViewAppConfig.cs" />
