--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -238,7 +238,8 @@
     <Compile Include="Config\RootAppConfig.cs" />   
     <Compile Include="Config\Providers\XmlAppConfigProvider.cs" />
     <Compile Include="Config\Providers\IAppConfigProvider.cs" />
-    <Compile Include="Config\AppConfig.cs" />
+        <Compile Include="Config\IAppConfig.cs" />
+<Compile Include="Config\AppConfigManager.cs" />		
     <Compile Include="Config\AudioAppConfig.cs" />
     <Compile Include="Config\ControlsAppConfig.cs" />
     <Compile Include="Config\TableViewAppConfig.cs" />
